Position-fixed header on mobile #794

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -8,7 +8,6 @@
 
 html.noscroll, body.noscroll {
   overflow: hidden;
-  position: fixed;
   height: 100%;
 }
 
